--- a/be/package.json
+++ b/be/package.json
@@ -35,7 +35,8 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "winston": "^3.8.2",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
