--- a/fe/package.json
+++ b/fe/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.5.2",
     "react-query": "^3.39.3",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
