--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,3 @@
-trigger:
-  branches:
-    include:
-      - main
-      - develop
-  paths:
-    include:
-      - fe/*
-      - be/*
-
-pool:
-  name: 'Astro'
-
 variables:
   nodeVersion: '24.x'
 
@@ -31,7 +18,6 @@ stages:
         npm install
       displayName: 'Install Frontend Dependencies'
     
-  
     - script: |
         cd fe
         npm run type-check
@@ -50,11 +36,10 @@ stages:
         tarCompression: 'gz'
         archiveFile: '$(Build.ArtifactStagingDirectory)/frontend.tar.gz'
         replaceExistingArchive: true
-
     
     - task: PublishBuildArtifacts@1
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)/frontend.zip'
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)/frontend.tar.gz'
         ArtifactName: 'frontend'
         publishLocation: 'Container'
 
@@ -88,16 +73,16 @@ stages:
       inputs:
         rootFolderOrFile: 'be'
         includeRootFolder: false
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/backend.zip'
+        archiveType: 'tar'
+        tarCompression: 'gz'
+        archiveFile: '$(Build.ArtifactStagingDirectory)/backend.tar.gz'
         replaceExistingArchive: true
     
     - task: PublishBuildArtifacts@1
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)/backend.zip'
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)/backend.tar.gz'
         ArtifactName: 'backend'
         publishLocation: 'Container'
-
 
 - stage: DeployDev
   displayName: 'Deploy to Development'
@@ -118,7 +103,7 @@ stages:
 
     - script: |
         mkdir -p /var/www/astrofinance/frontend-dev
-        unzip -o $(System.ArtifactsDirectory)/frontend/frontend.zip -d /var/www/astrofinance/frontend-dev
+        tar -xzf $(System.ArtifactsDirectory)/frontend/frontend.tar.gz -C /var/www/astrofinance/frontend-dev
         echo "Frontend deployed to /var/www/astrofinance/frontend-dev"
       displayName: 'Extract Frontend Build'
 
@@ -138,7 +123,7 @@ stages:
 
     - script: |
         mkdir -p /var/www/astrofinance/backend-dev
-        unzip -o $(System.ArtifactsDirectory)/backend/backend.zip -d /var/www/astrofinance/backend-dev
+        tar -xzf $(System.ArtifactsDirectory)/backend/backend.tar.gz -C /var/www/astrofinance/backend-dev
         echo "Backend deployed to /var/www/astrofinance/backend-dev"
       displayName: 'Extract Backend Build'
 
