--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,16 @@
+trigger:
+  branches:
+    include:
+      - main
+      - develop
+  paths:
+    include:
+      - fe/*
+      - be/*
+
+pool:
+  name: 'Astro'
+
 variables:
   nodeVersion: '24.x'
 
