--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -112,12 +112,14 @@ stages:
         buildType: 'current'
         downloadType: 'single'
         artifactName: 'frontend'
-        downloadPath: '$(System.ArtifactsDirectory)/frontend'
+        downloadPath: '$(System.ArtifactsDirectory)'
 
     - script: |
-        mkdir -p /var/www/astrofinance/frontend-dev
-        tar -xzf $(System.ArtifactsDirectory)/frontend/frontend.tar.gz -C /var/www/astrofinance/frontend-dev
-        echo "Frontend deployed to /var/www/astrofinance/frontend-dev"
+         echo "Listing downloaded files:"
+         ls -la $(System.ArtifactsDirectory)
+         mkdir -p /var/www/astrofinance/frontend-dev
+         tar -xzf $(System.ArtifactsDirectory)/frontend.tar.gz -C /var/www/astrofinance/frontend-dev
+         echo "Frontend deployed to /var/www/astrofinance/frontend-dev"
       displayName: 'Extract Frontend Build'
 
     - script: |
@@ -132,11 +134,13 @@ stages:
         buildType: 'current'
         downloadType: 'single'
         artifactName: 'backend'
-        downloadPath: '$(System.ArtifactsDirectory)/backend'
+        downloadPath: '$(System.ArtifactsDirectory)'
 
     - script: |
+        echo "Listing downloaded files:"
+        ls -la $(System.ArtifactsDirectory)
         mkdir -p /var/www/astrofinance/backend-dev
-        tar -xzf $(System.ArtifactsDirectory)/backend/backend.tar.gz -C /var/www/astrofinance/backend-dev
+        tar -xzf $(System.ArtifactsDirectory)/backend.tar.gz -C /var/www/astrofinance/backend-dev
         echo "Backend deployed to /var/www/astrofinance/backend-dev"
       displayName: 'Extract Backend Build'
 
