user module full complete

--- a/fe/package.json
+++ b/fe/package.json
@@ -14,12 +14,19 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/layout": "^2.3.1",
+    "@chakra-ui/react": "^3.22.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.2",
+    "chakra-ui": "^0.3.9",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.6",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
