--- a/be/package.json
+++ b/be/package.json
@@ -28,12 +28,15 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "ms": "^2.1.3",
     "multer": "^2.0.1",
+    "pdfkit": "^0.14.0",
     "winston": "^3.8.2",
     "yup": "^1.6.1",
     "zod": "^4.0.5"
@@ -45,8 +48,10 @@
     "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
+    "@types/ms": "^2.1.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.19.7",
+    "@types/pdfkit": "^0.13.4",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.40.0",
