--- a/be/package.json
+++ b/be/package.json
@@ -37,6 +37,7 @@
     "ms": "^2.1.3",
     "multer": "^2.0.1",
     "pdfkit": "^0.14.0",
+    "uuid": "^11.1.0",
     "winston": "^3.8.2",
     "yup": "^1.6.1",
     "zod": "^4.0.5"
@@ -52,6 +53,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.19.7",
     "@types/pdfkit": "^0.13.4",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.40.0",
