--- a/be/package.json
+++ b/be/package.json
@@ -30,12 +30,14 @@
     "dotenv": "^16.0.3",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
+    "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "multer": "^2.0.1",
+    "node-cache": "^5.1.2",
     "pdfkit": "^0.14.0",
     "uuid": "^11.1.0",
     "winston": "^3.8.2",
