--- a/fe/package.json
+++ b/fe/package.json
@@ -22,6 +22,8 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
@@ -33,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
