--- a/fe/package.json
+++ b/fe/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit --skipLibCheck",
     "format": "prettier --write \"**/*.{js,ts,tsx,json}\"",
     "test": "jest",
     "test:watch": "jest --watch",
