--- a/fe/package.json
+++ b/fe/package.json
@@ -29,10 +29,10 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^12.23.6",
     "next": "14.0.3",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.23.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
